doc/spec/python_project_review.txt
Python ディレクトリ再構成
=========================

リファレンス調査
検証
変更調査
単体検査
結合

リファレンス調査
------------------

Python 製コマンドラインツール

https://masudak.hatenablog.jp/entry/2015/01/13/234000

How To Package Your Python Code

https://python-packaging.readthedocs.io/en/latest/

検証
-----

pip install -e .

startup failed:
C:\home\getconfig\src\main\groovy\com\getconfig\Ticket\PortListRegister.groovy: 
4: unable to resolve class com.getconfig.TestItem
 @ line 4, column 1.
   import com.getconfig.TestItem
   ^

C:\home\getconfig\src\main\groovy\com\getconfig\Ticket\TestResultRegister.groovy: 3: unable to resolve class com.getconfig.Model.TestResult
 @ line 3, column 1.
   import com.getconfig.Model.TestResult
   ^

C:\home\getconfig\src\main\groovy\com\getconfig\Ticket\TestResultRegister.groovy: 4: unable to resolve class com.getconfig.Model.TestResultGroup
 @ line 4, column 1.
   import com.getconfig.Model.TestResultGroup
   ^

C:\home\getconfig\src\main\groovy\com\getconfig\Ticket\TestResultRegister.groovy: 5: unable to resolve class com.getconfig.TestItem
 @ line 5, column 1.
   import com.getconfig.TestItem
   ^

    creating build\src.win32-3.9\numpy\distutils
    building library "npymath" sources
    error: Microsoft Visual C++ 14.0 or greater is required. Get it with "Microsoft C++ Build Tools": https://visualstudio.microsoft.com/visual-cpp-build-tools/
    ----------------------------------------
ERROR: Command errored out with exit status 1: 'c:\python39\python.exe' 'c:\python39\lib\site-packages\pip\_vendor\pep517\_in_process.py' prepare_metadata_for_build_wheel 'C:\Users\frsw3\AppData\Local\Temp\tmpto34wb11' Check the logs for full command output.
   